<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hermes_motor_base</name>
  <version>0.1.0</version>
  <description>
    Low-level motor driver node for HERMES. Converts cmd_vel to PWM/direction
    signals for a TB6612FNG dual H-bridge motor driver over GPIO.
  </description>
  <maintainer email="yperera@uci.edu">hermes-team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>libgpiod</depend>                              <!-- system dependency -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>